<resources>
    <string name="app_name">DFCU Onboard</string>
    <string name="hint_email">Your Email</string>
    <string name="btn_validate">Validate</string>
    <string name="enter_email_instruction">Enter Your email to start the onBoarding Process</string>
    <string name="enter_code_instruction">Enter the 10 digit code that has been sent to your email.</string>
    <string name="hint_code">10 digit code</string>
    <string name="btn_verify">Verify</string>
    <string name="hint_other_name">Other Name</string>
    <string name="hint_surname_name">Surname</string>
    <string name="register_on_onboarding">Provide details below to complete your onboarding</string>
    <string name="hint_dob">Date Of Birth</string>
    <string name="id_images_instructions">Add Images of the Front and Back of Your ID - Each image 2MB size max)</string>
    <string name="btn_register">Register</string>
    <string name="profile">Profile</string>
    <string name="staff">Staff</string>
    <string name="analytics">Analytics</string>
    <string name="menu_edit_profile">Edit Profile</string>
    <string name="menu_toggle_theme">Change theme</string>
    <string name="menu_logout">Log Out</string>
    <string name="user_id_title">Your ID</string>
    <string name="email">Email:</string>
    <string name="d_o_b">D O B:</string>
    <string name="role">User Role:</string>
    <string name="admin_role">Administrator</string>
    <string name="staff_role">Staff</string>
    <string name="regdate">Registered On:</string>
    <string name="hint_emp_id">Employee ID</string>
    <string name="btn_retrieve">Retrieve</string>
    <string name="empty_all_staff_list">Either no employees have on boarded yet or we could not find that employee id</string>
    <string name="emp_name">Employee Name</string>
    <string name="pref_app_theme">current_theme</string>
    <string name="administrator">Administrator</string>
    <string name="add_user_instructions">Add emails and roles of staff who have to onboard</string>
    <string name="btn_add">Add</string>
    <string name="hint_log_date">Enter Date</string>
    <string name="staff_reg">Staff Registration</string>
    <string name="staff_retrieval">Staff Retrieval</string>
    <string name="staff_update">Staff Update</string>
</resources>