<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="?attr/bgColor"
    android:gravity="center"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="?attr/bgColor"
        android:layout_gravity="center_vertical"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="?attr/bgColor"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp" >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/logo" />

            <TextView
                android:id="@+id/verify_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:padding="@dimen/margin_padding_normal"
                android:textSize="@dimen/text_size_xxnormal"
                android:textColor="?attr/textColor"
                android:text="@string/enter_code_instruction"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/verify_code"
                android:textColorHint="?attr/hintTextColor"
                android:theme="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.MyStyle"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.MyStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edit_text_verify_code"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:hint="@string/hint_code"
                    android:autofillHints="@string/hint_code"
                    android:inputType="number"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:textColor="?attr/textColor" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/verify_code_btn"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dip"
                android:background="#000000"
                android:text="@string/btn_verify"
                android:textColor="@color/white" />

        </LinearLayout>

    </LinearLayout>
</ScrollView>